# crossguid

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  deploy_rsa.enc
doc/: generate-doc.sh  standardese.ini
examples/: CMakeLists.txt  readme.cpp
include/crossguid/: guid.hpp
src/: guid.cpp
test/: CMakeLists.txt  test.cpp  test.hpp  test_empty.cpp  test_main.cpp
